Fixed issue with big images having an uneven space.

--- a/src/app/image-view/image-view.component.scss
+++ b/src/app/image-view/image-view.component.scss
@@ -10,7 +10,6 @@
   display: flex;
   flex-flow: row nowrap;
   justify-content: center;
-  max-width: 95%;
 
   .image-view-inner {
     display: flex;
